		- added tracing of drive callers (Reinhard Resch)
		- added improved scaling (Reinhard Resch)
		- added support for automatic differentiation (Reinhard Resch)
		- improved step size control (Reinhard Resch)
		- improved hydrodynamic plain bearing (Reinhard Resch)
		- improved module-octave (Reinhard Resch)
		- added check for symmetry of inertia tensor
	Backward compatibility issues:
		- "overwrite" option of "setenv" changed
		- incompatible module-aerodyn syntax change
		- reference systems of aircraft instruments changed
		- reworked orientation description within node input
		  according to documentation (was inconsistent)
	Known issues:
		- Schur solver is broken
		- TotalPinJoint inverse dynamics support is broken
		- RTAI and multithread support incompatible
		- module-octave and multithread support incompatible
	Bug fixes:
		- fixed rotor radius in module-aerodyn (Jens van Schelve)
		- fixed redeclaration without definition of already defined
		  ifndef vars
		- fixed reference orientation reset after initial assembly
		  (Reinhard Resch)
		- fixed inertia computation with structural displacement
		  nodes (noted by Mattia Alioli)
		- fixed data initialization in external struct mapping
		  with membrane elements
		- fixed bug in Cardano hinge initial assembly
		- fixed bug in driven element when internal states
		  are differential (Reinhard Resch)
		- fixed memory issue in eigenanalysis (Reinhard Resch)
		- fixed bug in acceleration computation
		  (noted by Reinhard Resch)

MBDyn 1.5.5
	Enhancements:
		- added Umfpack solver iterative refinement support
		  (Reinhard Resch)
		- added built in drive callers interface to module-octave
		  (Reinhard Resch)
		- added scaling support to Naive, Umfpack and KLU solvers
		  (based on patch by Reinhard Resch)
	Backward compatibility issues:
		- old binary modal joint databases no longer supported
		- cyclocopter inflow models moved to module-cyclocopter
	Known issues:
		- Schur solver is broken