@@ -589,7 +589,7 @@ LinearTransmissionJoint::LinearTransmissionJoint(
 	DataManager* pDM, MBDynParser& HP)
 : Elem(uLabel, flag(0)),
 UserDefinedElem(uLabel, pDO), 
-pNode1(0), pNodeRef1(0), pNode2(0), pNodeRef2(0), Coef_f1(1.), Coef_f2(1.)
+pNode1(0), pNode2(0), pNodeRef1(0), pNodeRef2(0), Coef_f1(1.), Coef_f2(1.)
 {
 	// help
 	if (HP.IsKeyWord("help")) {
@@ -1208,7 +1208,7 @@ MotionTransmissionJoint::MotionTransmissionJoint(
 	DataManager* pDM, MBDynParser& HP)
 : Elem(uLabel, flag(0)),
 UserDefinedElem(uLabel, pDO), 
-pNode1(0), pNodeRef1(0), pNode2(0), pNodeRef2(0), Coef_f1(1.), Coef_f2(1.)
+pNode1(0), pNode2(0), pNodeRef1(0), pNodeRef2(0), Coef_f1(1.), Coef_f2(1.)
 {
 	// help
 	if (HP.IsKeyWord("help")) {
